@@ -1,0 +1,8 @@
+EXTRA_DIST = TestUtils.py \
+    AllAutomaticTests.py \
+    libvoikkoTest.py \
+    libvoikkoOldTest.py \
+    NullComponentTest.py
+TESTS_ENVIRONMENT = env LD_LIBRARY_PATH=../src/.libs python
+TESTS = AllAutomaticTests.py
+AUTOMAKE_OPTIONS = color-tests
